static_in_pro/our_static/css/affiliation_types.css
.container-fluid {
    background-color: #E5B34D;
}

#types_wrapper {
    width: auto;
    height: auto;
    overflow: hidden;
    /* Next_btn is relative to #types wrapper*/
    position: relative;
}

#mobile_types_list {
    width: 138px;
    float: left;
}

#types_display {
    overflow: hidden;
}

#mobile_types_list ul {
    padding: 0;
}

#mobile_types_list ul li {
    margin-left: -20px;
    font-size: 28px;
    list-style: none;
    line-height: 1.2;
    text-align: left;
    font-family: "Bariol";
    color: rgb(255, 255, 255);
    font-weight: bold;
    -moz-transform: matrix(0.75, 0, 0, 0.75, 0, 0);
    -webkit-transform: matrix(0.75, 0, 0, 0.75, 0, 0);
    -ms-transform: matrix(0.75, 0, 0, 0.75, 0, 0);
    cursor: pointer;
}

div#mobile_types_list ul li:first-child {
    padding-top: 10px;
}

#mobile_types_list ul li i {
    font-size: 28px;
    line-height: 4px;
}

.type_button {
    /* so checkbox position will be determined according to type_button */
    position: relative;
    margin-top: 15px;
    margin-bottom: 15px;
    border-radius: 50%;
    width: 140px;
    height: 140px;
    background-color: white;
    color: rgb(249, 163, 51);
    text-align: center;
    text-decoration: none;
    border: 2px solid white;
    font-size: 25px;
    font-family: "Bariol";
    font-weight: bold;
    line-height: 1.2;
}

.checkbox_text {
    font-size: 17px;
    font-family: "Bariol";
    color: rgb(230, 89, 42);
    line-height: 1.059;
    cursor: pointer;
}

/*replace default checkbox with font awesome checkbox*/
/* hide the original checkbox */
input[type=checkbox] {
    display: none;
}

input[type=checkbox] + label:before {
    font-family: FontAwesome;
    font-size: 22px;
    display: inline-block;
}

/* unchecked icon */
input[type=checkbox] + label:before {
    content: "\f096";
    cursor: pointer;
}

/* space between checkbox and label */
input[type=checkbox] + label:before {
    /*letter-spacing: 10px;*/
}

/* checked icon */
input[type=checkbox]:checked + label:before {
    content: "\f046";
    cursor: pointer;
}

/* allow space for check mark */
input[type=checkbox]:checked + label:before {
    letter-spacing: -4px;
}

.type_button label {
    position: absolute;
    bottom: 5px;
    left: 60px;
}

#next_page {
    border: none;
    position: absolute;
    right: 2px;
    bottom: 15px;
    cursor: pointer;
}

/*remove button outer border*/
button:focus {
    outline: none;
}

.description_text {
    width: 145px;
    height: 120px;
    margin: 0 auto;
    /*padding-bottom: 50px;*/
}

.choose_container {
    width: 140px;
    /*to hold 2 lines (small types name same as big)*/
    height: 45px;
    display: inline-block;
}

/*================ media queries==================*/

/* Extra Small Devices, Phones */
@media only screen and (max-width: 767px) {

}

/* Small Devices, Tablets */
@media only screen and (min-width: 768px) {
    .type_button {
        margin-top: 45px;
        margin-bottom: 35px;
        width: 155px;
        height: 155px;
        font-size: 28px;
    }

    /*fix first type list element padding*/
    div#mobile_types_list ul li:first-child {
        padding-top: 40px;
    }

    div#mobile_types_list ul li:last-child {
        padding-bottom: 20px;
    }

    #mobile_types_list ul li {
        margin-left: 15px;
        font-size: 30px;
    }

    #mobile_types_list {
        width: 180px;
    }

    .description_text {
        width: 170px;
        height: 140px;
    }

}

/* Medium Devices, Desktops */
@media only screen and (min-width: 992px) {

}

/* Large Devices, Wide Screens */
@media only screen and (min-width: 1200px) {

}

